src/bootstrap/src/core/builder/cli_paths/snapshots/x_test_rustdoc_html.snap
---
source: src/core/builder/cli_paths/tests.rs
expression: test rustdoc-html
---
[Test] test::RustdocHtml
    targets: [x86_64-unknown-linux-gnu]
    - Suite(test::tests/rustdoc-html)
